# rust-backend

./: .dockerignore  .env  .gitignore  .project  Cargo.toml  Dockerfile  README.md  log4rs.yml  test.sh
dao/: .env  Cargo.toml  log4rs.yml
dao/migrations/2018-09-20-172945_initialize/: up.sql
dao/migrations/2019-01-20-075124_default_users/: down.sql  up.sql
dao/migrations/2019-05-04-125224_unique_username_for_users/: down.sql
dao/migrations/2019-05-10-180000_create_employee/: up.sql
dao/migrations/2019-05-10-180000_create_emplyee/: down.sql
dao/migrations/2019-05-10-190000_create_salary/: up.sql
dao/migrations/2019-05-10-200000_create_contact/: up.sql
dao/src/: base_dao.rs  common_for_tests.rs  connection.rs  contacts_dao.rs  employees_dao.rs  lib.rs  models.rs  salaries_dao.rs  schema.rs  tests.rs  users_dao.rs
dao/test_data/salaries/2020-07-25-180000_employee_data/: up.sql
httpRequests/: Test.http  http-client.env.json
main/: Cargo.toml
main/src/: main.rs
migrations/2018-09-20-172945_initialize/: up.sql
migrations/2019-05-04-125224_unique_username_for_users/: up.sql
migrations/2019-05-10-190000_create_salary/: down.sql  up.sql
rest/: Cargo.toml
rest/src/: employee.rs  lib.rs  session.rs  user.rs
src/: adhoc_tests.rs  commons_for_tests.rs  main.rs  main_tests.rs  test_data.rs  tests.rs  user_tests.rs  users_dao.rs
