[package]
name = "main"
version = "0.1.0"
authors = ["jslupicki <jan@slupicki.com>"]
edition = "2018"

[dependencies]
dao = { path = "dao" }
rest = { path = "rest" }
log = "0.4.8"
log4rs = "0.13.0"
actix-web = "2.0.0"
actix-rt = "1.1.1"

[dev-dependencies]
diesel = { version = "1.4.4", features = ["sqlite", "chrono"] }
diesel_migrations = "1.4.0"
lazy_static = "1.4.0"
bytes = { version = "0.5.4", features = ["serde"] }
actix-http = "1.0.1"
actix-service = "1.0.5"
scopeguard = "1.1.0"

[workspace]
members = [
    "dao",
    "rest",
]
