[package]
name = "main"
version = "0.1.0"
authors = ["jslupicki <jan@slupicki.com>"]
edition = "2018"

[dependencies]
dao = { path = "dao" }
rest = { path = "rest" }
log = "0.4.11"
log4rs = "0.13.0"
actix-web = "3.0.0"
actix-rt = "1.1.1"

[dev-dependencies]
diesel = { version = "1.4.5", features = ["sqlite", "chrono"] }
diesel_migrations = "1.4.0"
lazy_static = "1.4.0"
bytes = { version = "0.5.6", features = ["serde"] }
actix-http = "2.0.0"
actix-service = "1.0.6"
scopeguard = "1.1.0"

[workspace]
members = [
    "dao",
    "rest",
]
