[package]
name = "main"
version = "0.1.0"
authors = ["jslupicki <jan@slupicki.com>"]
edition = "2024"

[dependencies]
dao = { path = "dao" }
rest = { path = "rest" }
log = "0.4.11"
log4rs = "1.3.0"
actix-web = "4.11.0"
actix-rt = "2.10.0"

[dev-dependencies]
diesel = { version = "2.2.12", features = ["sqlite", "chrono"] }
diesel_migrations = "2.2.0"
lazy_static = "1.5.0"
bytes = { version = "1.10.1", features = ["serde"] }
actix-http = "3.11.0"
actix-service = "2.0.3"
scopeguard = "1.2.0"

[workspace]
members = [
    ".",
    "dao",
    "rest",
]
