[package]
name = "dao"
version = "0.1.0"
authors = ["jslupicki <jan@slupicki.com>"]
#edition = "2018"

[dependencies]
log = "0.4.8"
log4rs = "0.11.0"
diesel = { version = "1.4.4", features = ["sqlite", "chrono"] }
diesel_migrations = "1.4.0"
dotenv = "0.15.0"
r2d2 = "0.8.8"
r2d2-diesel = "1.0.0"
lazy_static = "1.4.0"
sha3 = "0.8.2"
monitor = "0.1.0"
serde = "1.0.105"
serde_derive = "1.0.105"
serde_json = "1.0.50"
chrono =  { version = "0.4.11", features = ["serde"] }
