[package]
name = "dao"
version = "0.1.0"
authors = ["jslupicki <jan@slupicki.com>"]
edition = "2018"

[dependencies]
log = "0.4.11"
log4rs = "1.0.0"
#Range could be check on https://docs.rs/crate/diesel/1.4.6/source/Cargo.toml
libsqlite3-sys = { version = ">=0.8.0, <0.21.0", features = ["bundled"] }
diesel = { version = "1.4.6", features = ["sqlite", "chrono"] }
diesel_migrations = "1.4.0"
dotenv = "0.15.0"
r2d2 = "0.8.9"
r2d2-diesel = "1.0.0"
lazy_static = "1.4.0"
sha3 = "0.9.1"
monitor = "0.1.0"
serde = "1.0.116"
serde_derive = "1.0.116"
serde_json = "1.0.57"
chrono =  { version = "0.4.15", features = ["serde"] }
