[package]
name = "dao"
version = "0.1.0"
authors = ["jslupicki <jan@slupicki.com>"]
edition = "2024"

[dependencies]
log = "0.4.27"
log4rs = "1.3.0"
#Range could be check on https://docs.rs/crate/diesel/2.2.0/source/Cargo.toml
libsqlite3-sys = { version = "0.30.0", features = ["bundled"] }
diesel = { version = "2.2.12", features = ["sqlite", "chrono", "returning_clauses_for_sqlite_3_35", "r2d2"] }
diesel_migrations = "2.2.0"
dotenv = "0.15.0"
r2d2 = "0.8.10"
lazy_static = "1.5.0"
sha3 = "0.10.8"
monitor = "0.1.0"
serde = "1.0.219"
serde_derive = "1.0.219"
serde_json = "1.0.140"
chrono = { version = "0.4.41", features = ["serde"] }
