[package]
name = "rest"
version = "0.1.0"
authors = ["jslupicki <jan@slupicki.com>"]
edition = "2018"

[dependencies]
dao = { path = "../dao" }
log = "0.4.8"
log4rs = "0.11.0"
actix-web = "2.0.0"
actix-service = "1.0.5"
actix-http = "1.0.1"
serde = "1.0.106"
serde_derive = "1.0.106"
serde_json = "1.0.51"
cookie = "0.13.3"
lazy_static = "1.4.0"
failure = "0.1.7"
uuid = { version = "0.8.1", features = ["v4"] }
chrono =  { version = "0.4.11", features = ["serde"] }
futures = "0.3"
