[package]
name = "rest"
version = "0.1.0"
authors = ["jslupicki <jan@slupicki.com>"]
edition = "2018"

[dependencies]
dao = { path = "../dao" }
log = "0.4.11"
log4rs = "0.13.0"
actix-web = "3.0.0"
actix-service = "1.0.6"
actix-http = "2.0.0"
serde = "1.0.116"
serde_derive = "1.0.116"
serde_json = "1.0.57"
cookie = "0.14.2"
lazy_static = "1.4.0"
failure = "0.1.8"
uuid = { version = "0.8.1", features = ["v4"] }
chrono =  { version = "0.4.15", features = ["serde"] }
futures = "0.3"
