[package]
name = "rest"
version = "0.1.0"
authors = ["jslupicki <jan@slupicki.com>"]
edition = "2024"

[dependencies]
dao = { path = "../dao" }
log = "0.4.11"
log4rs = "1.0.0"
actix-web = "4.11.0"
actix-service = "2.0.3"
actix-http = "3.11.0"
serde = "1.0.116"
serde_derive = "1.0.116"
serde_json = "1.0.57"
cookie = "0.18.1"
lazy_static = "1.4.0"
failure = "0.1.8"
uuid = { version = "1.17.0", features = ["v4"] }
chrono = { version = "0.4.15", features = ["serde"] }
futures = "0.3"
